// ============================================================================
// Knowledge Management System
// Paste into https://dbdiagram.io/d
// ============================================================================

// --- STAGE 1: COLLECTION ---

Table contributors {
  id int [pk, increment]
  name varchar(255) [not null]
  sort_name varchar(255)
  affiliation varchar(255)
  role varchar(255)
  bio text
  avatar varchar(512)
  website varchar(512)
  evaluation_results json
  created_at timestamp
}

Table publications {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  type enum('blog','podcast','newsletter','journal','platform','conference','other') [not null, default: 'other']
  url varchar(1024)
  created_at timestamp
}

Table sources {
  id int [pk, increment]
  title varchar(500) [not null]
  source_type enum('interview','lecture','panel','essay','research','tutorial','news','review','documentation','report','other') [not null]
  format enum('transcript','text') [not null]
  url varchar(1024)
  publication_id int
  published_date date
  date_collected timestamp
  evaluation_results json
  content longtext [not null]
  distillation longtext
  word_count int
  status enum('collected','distilling','distilled','decomposing','decomposed') [not null, default: 'collected']
  summary text
  distillation_notes text
  curation_rule_version_id int
  created_at timestamp
  updated_at timestamp
}

Table source_contributors {
  source_id int [not null]
  contributor_id int [not null]
  role enum('author','speaker','interviewer','interviewee','host','panelist','editor','other') [not null, default: 'author']
  indexes { (source_id, contributor_id, role) [pk] }
}

Ref: sources.publication_id > publications.id [delete: set null]
Ref: sources.curation_rule_version_id > curation_rule_versions.id [delete: set null]
Ref: source_contributors.source_id > sources.id [delete: cascade]
Ref: source_contributors.contributor_id > contributors.id [delete: restrict]

// --- CONTENT FILTERING ---

Table curation_rules {
  id          int [pk, increment]
  name        varchar(255) [not null]
  description text
  is_active   boolean [not null, default: true]
  created_at  timestamp
  updated_at  timestamp
}

Table curation_rule_versions {
  id                     int [pk, increment]
  filter_id              int [not null]
  version                int [not null]
  content_filter         text [not null]
  preferred_terminology  text
  created_at             timestamp
  indexes { (filter_id, version) [unique] }
}

Ref: curation_rule_versions.filter_id > curation_rules.id [delete: cascade]

// --- STAGE 2: COMPOSITION ---

Table compositions {
  id int [pk, increment]
  title varchar(500) [not null]
  content longtext [not null]
  word_count int
  evaluation_results json
  status enum('draft','reviewed','published','archived') [not null, default: 'draft']
  created_at timestamp
  updated_at timestamp
}

Table composition_sources {
  composition_id int [not null]
  source_id int [not null]
  contribution_note text
  indexes { (composition_id, source_id) [pk] }
}

Ref: composition_sources.composition_id > compositions.id [delete: cascade]
Ref: composition_sources.source_id > sources.id [delete: restrict]

// --- STAGE 3: DECOMPOSITION ---

Table topics {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  description text
  parent_topic_id int
  created_at timestamp
}

Ref: topics.parent_topic_id > topics.id

Table themes {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  thesis text [not null]
  description text
  created_at timestamp
}

Table claims {
  id int [pk, increment]
  statement text [not null]
  claim_type enum('assertion','recommendation','prediction','definition','observation','mechanism','distinction','other') [not null, default: 'assertion']
  parent_claim_id int
  evaluation_results json
  reviewer_notes text
  decomposition_notes text
  abstraction_level enum('conceptual','applied','implementation')
  assumed_expertise enum('foundational','intermediate','advanced')
  created_at timestamp
  updated_at timestamp
}

Ref: claims.parent_claim_id > claims.id [delete: set null]

Table claim_links {
  id int [pk, increment]
  claim_id_a int [not null]
  claim_id_b int [not null]
  link_type enum('contradicts','refines','generalizes','depends_on','enables','tensions_with','other') [not null]
  decomposition_notes text
  created_at timestamp
}

Ref: claim_links.claim_id_a > claims.id [delete: cascade]
Ref: claim_links.claim_id_b > claims.id [delete: cascade]

Table claim_topics {
  claim_id int [not null]
  topic_id int [not null]
  indexes { (claim_id, topic_id) [pk] }
}

Ref: claim_topics.claim_id > claims.id [delete: cascade]
Ref: claim_topics.topic_id > topics.id [delete: cascade]

Table claim_themes {
  claim_id int [not null]
  theme_id int [not null]
  indexes { (claim_id, theme_id) [pk] }
}

Ref: claim_themes.claim_id > claims.id [delete: cascade]
Ref: claim_themes.theme_id > themes.id [delete: cascade]

Table claim_tags {
  claim_id int [not null]
  tag varchar(100) [not null]
  indexes { (claim_id, tag) [pk] }
}

Ref: claim_tags.claim_id > claims.id [delete: cascade]

// --- CLAIM SOURCES (direct assertion link) ---

Table claim_sources {
  claim_id int [not null]
  source_id int [not null]
  is_key boolean [not null, default: false]
  confidence enum('definitive','strong','moderate','tentative','speculative') [not null, default: 'moderate']
  conviction enum('insistent','firm','moderate','open','passing') [not null, default: 'moderate']
  indexes { (claim_id, source_id) [pk] }
}

Ref: claim_sources.claim_id > claims.id [delete: cascade]
Ref: claim_sources.source_id > sources.id [delete: restrict]

// --- DECOMPOSITION ENTITIES ---

Table devices {
  id int [pk, increment]
  content text [not null]
  source_id int [not null]
  device_type enum('analogy','metaphor','narrative','example','thought_experiment','visual')
  effectiveness_note text
  decomposition_notes text
  created_at timestamp
}

Table claim_devices {
  device_id int [not null]
  claim_id int [not null]
  indexes { (device_id, claim_id) [pk] }
}

Ref: devices.source_id > sources.id [delete: restrict]
Ref: claim_devices.device_id > devices.id [delete: cascade]
Ref: claim_devices.claim_id > claims.id [delete: cascade]

Table contexts {
  id int [pk, increment]
  content text [not null]
  source_id int [not null]
  context_type enum('historical','industry','technical','organizational','regulatory','cultural','scope')
  decomposition_notes text
  created_at timestamp
}

Table claim_contexts {
  context_id int [not null]
  claim_id int [not null]
  indexes { (context_id, claim_id) [pk] }
}

Ref: contexts.source_id > sources.id [delete: restrict]
Ref: claim_contexts.context_id > contexts.id [delete: cascade]
Ref: claim_contexts.claim_id > claims.id [delete: cascade]

Table methods {
  id int [pk, increment]
  content text [not null]
  source_id int [not null]
  method_type enum('process','framework','technique','tool','practice','metric')
  decomposition_notes text
  abstraction_level enum('conceptual','applied','implementation')
  assumed_expertise enum('foundational','intermediate','advanced')
  created_at timestamp
}

Table claim_methods {
  method_id int [not null]
  claim_id int [not null]
  indexes { (method_id, claim_id) [pk] }
}

Ref: methods.source_id > sources.id [delete: restrict]
Ref: claim_methods.method_id > methods.id [delete: cascade]
Ref: claim_methods.claim_id > claims.id [delete: cascade]

Table reasonings {
  id int [pk, increment]
  content text [not null]
  source_id int [not null]
  evidence_id int [not null]
  claim_id int [not null]
  reasoning_type enum('deductive','inductive','analogical','causal','abductive')
  decomposition_notes text
  created_at timestamp
}

Ref: reasonings.source_id > sources.id [delete: restrict]
Ref: reasonings.evidence_id > evidence.id [delete: cascade]
Ref: reasonings.claim_id > claims.id [delete: cascade]

// --- EVIDENCE ---

Table evidence {
  id int [pk, increment]
  content text [not null]
  source_id int [not null]
  evidence_type enum('empirical','case_study','expert_opinion','anecdotal','theoretical','statistical','other') [not null, default: 'expert_opinion']
  verbatim_quote text
  evaluation_results json
  derived_from_evidence_id int
  decomposition_notes text
  abstraction_level enum('conceptual','applied','implementation')
  assumed_expertise enum('foundational','intermediate','advanced')
  created_at timestamp
}

Ref: evidence.source_id > sources.id [delete: restrict]
Ref: evidence.derived_from_evidence_id > evidence.id [delete: set null]

Table claim_evidence {
  claim_id int [not null]
  evidence_id int [not null]
  stance enum('supporting','contradicting','qualifying') [not null, default: 'supporting']
  evaluation_results json [note: 'strength (1–5 numeric), strength_notes (justification), evaluated_at']
  indexes { (claim_id, evidence_id) [pk] }
}

Ref: claim_evidence.claim_id > claims.id [delete: cascade]
Ref: claim_evidence.evidence_id > evidence.id [delete: cascade]

// --- PIPELINE LOGGING ---

Table pipeline_runs {
  id int [pk, increment]
  source_id int
  url varchar(1024) [not null]
  status enum('running','completed','failed','paused') [not null, default: 'running']
  started_at timestamp
  completed_at timestamp
  total_duration_s int
}

Ref: pipeline_runs.source_id > sources.id

Table pipeline_stages {
  id int [pk, increment]
  run_id int [not null]
  stage enum('collect','distill','decompose','categorize','evaluate','status') [not null]
  status enum('running','success','error','skipped') [not null, default: 'running']
  duration_s int
  total_tokens int
  tool_uses int
  result_json json
  started_at timestamp
  completed_at timestamp
}

Ref: pipeline_stages.run_id > pipeline_runs.id

// --- TABLE GROUPS ---

TableGroup curation_rules {
  curation_rules
  curation_rule_versions
}

TableGroup collection {
  contributors
  publications
  sources
  source_contributors
}

TableGroup composition {
  compositions
  composition_sources
}

TableGroup decomposition {
  topics
  themes
  claims
  claim_sources
  claim_links
  claim_topics
  claim_themes
  claim_tags
}

TableGroup decomposition_entities {
  devices
  claim_devices
  contexts
  claim_contexts
  methods
  claim_methods
  reasonings
}

TableGroup evidence_layer {
  evidence
  claim_evidence
}

TableGroup pipeline_logging {
  pipeline_runs
  pipeline_stages
}